--- a/templates/scribe/detail.html.twig
+++ b/templates/scribe/detail.html.twig
@@ -1,34 +1,112 @@
 {% extends 'base.html.twig' %}
 
-{% block page_title %}Scribe Corner{% endblock %}
-
 {% block body %}
-<div class="card">
+<div class="card mb-3 shadow-sm">
     <div class="card-header">
-        <h3>Snapshot: {{ snapshotInfo.name }}</h3>
+        <h3>
+            Snapshot: {{ snapshotInfo.name }}
+        </h3>
+
+        Total: {{ snapshotInfo.total }}
+        Completed: {{ snapshotInfo.numCompleted }}
+        Incomplete: {{ snapshotInfo.numIncomplete }}
+        Missing: {{ snapshotInfo.numMissing }}
     </div>
-    <div class="card-body d-flex flex-row">
-        <div class="p-2 pl-5">
-            <h4>Incomplete</h4>
-            {% for govSnapshot in incompleteSnapshots %}
-                <p>
-                    {{ govSnapshot.governor.name }}
-                    <a href="{{ path('scribe_gov_snapshot_edit', { id: govSnapshot.id }) }}" class="btn btn-primary btn-sm">Complete</a>
-                </p>
+    <div class="card-body container">
+        <div class="row p-2 mb-3">
+            <span class="font-weight-bold pl-2">Filter: </span>
+            <a href="{{ path('scribe_snapshot_detail', {'snapshotUid': snapshotInfo.uid}) }}" class="btn btn-outline-primary btn-sm ml-3">
+                All
+            </a>
+            {% for alliance in snapshotInfo.alliances %}
+                <a href="?alliance={{ alliance.id }}" class="btn btn-outline-primary btn-sm ml-3">
+                    {{ alliance.tag }}
+                </a>
             {% endfor %}
         </div>
-        <div class="p-2 pl-5">
-            <h4>Missing</h4>
-            {% for governor in missingGovs %}
-                <p>
-                    {{ governor.name }}
-                    <a
-                        href="{{ path('scribe_gov_snapshot_create', { govId: governor.id, snapshotUid: snapshotInfo.uid }) }}"
-                        class="btn btn-primary btn-sm"
-                    >Create</a>
-                </p>
-            {% endfor %}
+        <div class="row">
+            <div class="col-sm">
+                <table class="table table-striped table-bordered">
+                    <thead>
+                    <tr>
+                        <th scope="col">Completed</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        {% for govSnapshot in snapshotInfo.completedGovSnapshots %}
+                            <tr>
+                                <td>
+                                    {{ govSnapshot.governor.name }}
+                                    <a
+                                        href="{{ path('scribe_gov_snapshot_edit', { id: govSnapshot.id }) }}?snapshot={{ snapshotInfo.uid }}"
+                                        class="btn btn-outline-secondary btn-sm px-1 py-0"
+                                    >Edit</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-sm">
+                <table class="table table-striped table-bordered">
+                    <thead>
+                    <tr>
+                        <th scope="col">Incomplete</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for govSnapshot in snapshotInfo.incompleteGovSnapshots %}
+                        <tr>
+                            <td>
+                                {{ govSnapshot.governor.name }}
+                                <a
+                                        href="{{ path('scribe_gov_snapshot_edit', { id: govSnapshot.id }) }}?snapshot={{ snapshotInfo.uid }}"
+                                        class="btn btn-outline-secondary btn-sm px-1 py-0"
+                                >Edit</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-sm">
+                <table class="table table-striped table-bordered">
+                    <thead>
+                    <tr>
+                        <th scope="col">Missing</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for governor in snapshotInfo.missingGovs %}
+                        <tr>
+                            <td>
+                                {{ governor.name }}
+                                <a
+                                    href="{{ path('scribe_gov_snapshot_create', { govId: governor.id, snapshotUid: snapshotInfo.uid }) }}?snapshot={{ snapshotInfo.uid }}"
+                                    class="btn btn-outline-secondary btn-sm px-1 py-0"
+                                >Create</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
+
+{% if is_granted(constant('App\\Entity\\Role::ROLE_SCRIBE_ADMIN')) %}
+    <div class="card mb-3 shadow-sm">
+        <div class="card-header">
+            <h3>Admin Actions</h3>
+        </div>
+        <div class="card-body mb-0">
+            <a
+                href="{{ path('scribe_snapshot_populate', {snapshotUid: snapshotInfo.uid}) }}"
+                class="btn btn-warning"
+                title="WARNING! Will add all governors from main alliances!"
+            >Populate from Main Alliances</a>
+        </div>
+    </div>
+{% endif %}
 {% endblock %}
