--- a/templates/governor/officer_notes.html.twig
+++ b/templates/governor/officer_notes.html.twig
@@ -1,22 +1,12 @@
 {% if gov.officerNotes %}
-<div class="card">
+<div class="card mb-3 shadow-sm">
     <div class="card-header">
         <h4>Officer Notes</h4>
     </div>
     <div class="card-body">
         <div class="officer-notes">
             {% for officerNote in gov.officerNotes %}
-                <div class="card mb-3">
-                    <div class="card-header">
-                        <h5>{{ officerNote.tldr }}</h5>
-                        <span>
-                            {{ officerNote.created|date }}
-                        </span>
-                    </div>
-                    <div class="card-body">
-                        <p>{{ officerNote.note }}</p>
-                    </div>
-                </div>
+                {% include 'governor/officer_note.html.twig' with {officerNote: officerNote} only %}
             {% endfor %}
         </div>
     </div>
