--- a/templates/index_member.html.twig
+++ b/templates/index_member.html.twig
@@ -3,5 +3,5 @@
 {% block page_title %}{% endblock %}
 
 {% block body %}
-    {{ include('search/memberSearch.html.twig') }}
+    {{ include('search/member_search.html.twig') }}
 {% endblock %}
