--- a/templates/governor/officer_actions.html.twig
+++ b/templates/governor/officer_actions.html.twig
@@ -4,6 +4,6 @@
     </div>
     <div class="card-body">
         <a class="btn btn-primary" href="{{ path('governor_add_note', {'id': gov.id}) }}">Add Note</a>
-        <a class="btn btn-primary ml-2" href="{{ path('governor_set_alliance', {'id': gov.id}) }}">Set Alliance</a>
+        <a class="btn btn-primary ml-2" href="{{ path('governor_edit', {'id': gov.id}) }}">Edit</a>
     </div>
 </div>
