--- a/templates/governor/kvk_rankings.html.twig
+++ b/templates/governor/kvk_rankings.html.twig
@@ -1,5 +1,5 @@
 <div class="gov-rankings">
-    <table class="table table-striped table-bordered">
+    <table class="table table-striped table-bordered shadow-sm">
         <thead>
         <tr>
             <th scope="col">KVK #</th>
