--- a/templates/governor/officer_actions.html.twig
+++ b/templates/governor/officer_actions.html.twig
@@ -1,4 +1,4 @@
-<div class="card officer-actions mb-3">
+<div class="card officer-actions mb-3  shadow-sm">
     <div class="card-header">
         <h5>Officer Actions</h5>
     </div>
