--- a/templates/search/search_result_gov.html.twig
+++ b/templates/search/search_result_gov.html.twig
@@ -32,15 +32,10 @@
         <div class="search-pill pill-border">
             <span class="pill-label">RSS Assistance</span> {{ gov.rssAssistance|number_format }}
         </div>
-        {% if gov.kvk4Ranking %}
+        {% for kvkRanking in gov.kvkRankings %}
             <div class="search-pill pill-border">
-                <span class="pill-label">KVK 4 Rank</span> {{ gov.kvk4Ranking }}
+                <span class="pill-label">KVK {{ kvkRanking.kvkNumber }} Rank</span> {{ kvkRanking.ranking }}
             </div>
-        {% endif %}
-        {% if gov.kvk5Ranking %}
-            <div class="search-pill pill-border">
-                <span class="pill-label">KVK 5 Rank</span> {{ gov.kvk5Ranking }}
-            </div>
-        {% endif %}
+        {% endfor %}
     </div>
 </div>
