--- a/templates/governor/edit.html.twig
+++ b/templates/governor/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block page_title %}Set Alliance for {{ gov.name }}{% endblock %}
+{% block page_title %}Edit {{ gov.name }}{% endblock %}
 
 {% block body %}
     {{ form_start(form) }}
