--- a/templates/scribe/index.html.twig
+++ b/templates/scribe/index.html.twig
@@ -34,8 +34,7 @@
         </div>
         <div class="card-body mb-0">
             <a  class="btn btn-warning" href="{{ path('scribe_snapshot_create') }}">Create Snapshot</a>
-            <a class="btn btn-outline-primary ml-2" href="{{ path('import_governors') }}">Import Governors</a>
-            <a class="btn btn-outline-primary ml-2" href="{{ path('import_governor_snapshots') }}">Import Governor Snapshots</a>
+            <a class="btn btn-outline-primary ml-2" href="{{ path('create_import') }}">Import</a>
         </div>
     </div>
 {% endif %}
