--- a/templates/scribe/index.html.twig
+++ b/templates/scribe/index.html.twig
@@ -27,15 +27,16 @@
         </div>
     {% endif %}
 {% endfor %}
-{% if is_granted(constant('App\\Entity\\Role::ROLE_SCRIBE_ADMIN')) %}
-    <div class="card mb-3 shadow-sm">
-        <div class="card-header">
-            <h3>Admin Actions</h3>
-        </div>
-        <div class="card-body mb-0">
-            <a  class="btn btn-warning" href="{{ path('scribe_snapshot_create') }}">Create Snapshot</a>
-            <a class="btn btn-outline-primary ml-2" href="{{ path('create_import') }}">Import</a>
-        </div>
+<div class="card mb-3 shadow-sm">
+    <div class="card-header">
+        <h3>Admin Actions</h3>
     </div>
-{% endif %}
+    <div class="card-body mb-0">
+        {% if is_granted(constant('App\\Entity\\Role::ROLE_SCRIBE_ADMIN')) %}
+        <a  class="btn btn-warning" href="{{ path('scribe_snapshot_create') }}">Create Snapshot</a>
+        <a class="btn btn-outline-primary ml-2" href="{{ path('create_import') }}">Import</a>
+        {% endif %}
+        <a class="btn btn-outline-primary ml-2" href="{{ path('export_index') }}">Export</a>
+    </div>
+</div>
 {% endblock %}
