add made by janvt

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,6 +34,11 @@
             {% block wide_body %}{% endblock %}
         </div>
 
+        <a href="http://janvt.io" target="_blank" class="janvt">
+            <img src="{{ asset('images/janvt.jpg') }}" alt="" />
+            by janvt
+        </a>
+
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
