--- a/templates/governor/index.html.twig
+++ b/templates/governor/index.html.twig
@@ -5,7 +5,18 @@
 {% block body %}
     {% include 'search/search_result_gov.html.twig' %}
 
-    {% include 'governor/kvk_rankings.html.twig' with {gov: gov} only %}
+    {% if gov.kvkRankings %}
+        {% include 'governor/kvk_rankings.html.twig' with {gov: gov} only %}
+    {% endif %}
+
+    <div class="card officer-actions mb-3  shadow-sm">
+        <div class="card-header">
+            <h3>Profile Actions</h3>
+        </div>
+        <div class="card-body">
+            <a class="btn btn-primary" href="{{ path('governor_edit_commanders', {'id': gov.id}) }}">Edit Commanders</a>
+        </div>
+    </div>
 
     {% if is_granted(constant('App\\Entity\\Role::ROLE_OFFICER')) %}
         {% include 'governor/officer_actions.html.twig' with {gov: gov} only %}
