add equipment management and profile display

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -3,6 +3,8 @@ $blurple: #7289DA;
 $hero-background: #002B8F;
 $hero-text: #FFFFFF;
 
+$expertise: #EFE459;
+
 $status-active: #00A388;
 $status-inactive: #EEEEEE;
 $status-blacklisted: #FF4444;
