--- a/templates/governor/index.html.twig
+++ b/templates/governor/index.html.twig
@@ -13,6 +13,10 @@
         {% include 'governor/commanders.html.twig' with {commanders: commanders} only %}
     {% endif %}
 
+    {% if equipment|default %}
+        {% include 'governor/equipment.html.twig' with {equipment: equipment} only %}
+    {% endif %}
+
     {% if userOwnsGov %}
     <div class="card officer-actions mb-3  shadow-sm">
         <div class="card-header">
@@ -20,6 +24,7 @@
         </div>
         <div class="card-body">
             <a class="btn btn-primary" href="{{ path('governor_edit_commanders', {'id': gov.id}) }}">Edit Commanders</a>
+            <a class="btn btn-primary ml-2" href="{{ path('governor_edit_equipment', {'id': gov.id}) }}">Edit Equipment</a>
         </div>
     </div>
     {% endif %}
