--- a/templates/governor/index.html.twig
+++ b/templates/governor/index.html.twig
@@ -17,14 +17,18 @@
         {% include 'governor/equipment.html.twig' with {equipment: equipment} only %}
     {% endif %}
 
-    {% if userOwnsGov %}
+    {% if userOwnsGov and (ffCommanders or ffEquipment) %}
     <div class="card officer-actions mb-3  shadow-sm">
         <div class="card-header">
             <h3>Profile Actions</h3>
         </div>
         <div class="card-body">
+            {% if ffCommanders %}
             <a class="btn btn-primary" href="{{ path('governor_edit_commanders', {'id': gov.id}) }}">Edit Commanders</a>
+            {% endif %}
+            {% if ffEquipment %}
             <a class="btn btn-primary ml-2" href="{{ path('governor_edit_equipment', {'id': gov.id}) }}">Edit Equipment</a>
+            {% endif %}
         </div>
     </div>
     {% endif %}
