--- a/templates/governor/edit.html.twig
+++ b/templates/governor/edit.html.twig
@@ -1,20 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block page_title %}Edit {{ gov.name }}{% endblock %}
+{% block page_title %}{% endblock %}
 
 {% block body %}
-    {{ form_start(form) }}
-    <div class="input-group mb-3">
-        <div class="input-group-prepend">
-            {{ form_label(form.status, null, {'label_attr': {'class': 'input-group-text'}}) }}
+    <div class="card mb-3 shadow-sm">
+        <div class="card-header">
+            <h3>Edit {{ gov.name }}</h3>
         </div>
-        {{ form_widget(form.status) }}
-    </div>
-    <div class="input-group mb-3">
-        <div class="input-group-prepend">
-            {{ form_label(form.alliance, null, {'label_attr': {'class': 'input-group-text'}}) }}
+        <div class="card-body mb-0">
+            {{ form_start(form) }}
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    {{ form_label(form.status, null, {'label_attr': {'class': 'input-group-text'}}) }}
+                </div>
+                {{ form_widget(form.status) }}
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    {{ form_label(form.alliance, null, {'label_attr': {'class': 'input-group-text'}}) }}
+                </div>
+                {{ form_widget(form.alliance) }}
+            </div>
+            {{ form_end(form) }}
         </div>
-        {{ form_widget(form.alliance) }}
     </div>
-    {{ form_end(form) }}
 {% endblock %}
