--- a/templates/officer/governor_profile_claim.html.twig
+++ b/templates/officer/governor_profile_claim.html.twig
@@ -1,32 +1,48 @@
 {% extends 'base.html.twig' %}
 
-{% block page_title %}Profile Claim for Discord User {{ claim.user.discordUsername }}{% endblock %}
+{% block page_title %}{% endblock %}
 
 {% block body %}
-    {% if claim.user.isKingdomMember %}
-        <button class="btn btn-success disabled">Kingdom Access Granted</button>
-    {% else %}
-        <a class="btn btn-warning" href="{{ path('make_kingdom_member', {id: claim.user.id, redirect_to_claim: claim.id}) }}">
-            Grant Kingdom Access
-        </a>
-    {% endif %}
+    <div class="card mb-3 shadow-sm">
+        <div class="card-header">
+            <h4>Profile Claim for Discord User {{ claim.user.discordUsername }}</h4>
+        </div>
+        <div class="card-body">
+            <img class="img-fluid shadow mb-4" src="{{ asset(profileClaimImage) }}" alt="governor profile claim" />
 
-    <img class="img-fluid" src="{{ asset(profileClaimImage) }}" alt="governor profile claim" />
+            <div class="mt-3">
+            {% if claim.user.isKingdomMember %}
+                <button class="btn btn-success disabled float-right">Kingdom Access Granted</button>
+            {% else %}
+                <a class="btn btn-warning float-right" href="{{ path('make_kingdom_member', {id: claim.user.id, redirect_to_claim: claim.id}) }}">
+                    Grant Kingdom Access
+                </a>
+            {% endif %}
+            </div>
+        </div>
+    </div>
 
-    {{ include('search/search_form.html.twig') }}
+    <div class="card mb-3 shadow-sm">
+        <div class="card-header">
+            <h4>Link Governor to {{ claim.user.discordUsername }}</h4>
+        </div>
+        <div class="card-body">
+            {{ include('search/search_form.html.twig') }}
 
-    {% if searchResult is not empty %}
-        {% for gov in searchResult.governors %}
-            {% set actions %}
-                {% if gov.user %}
-                    <button class="btn btn-success disabled">Linked to {{ gov.user.discordDisplayName }}</button>
-                {% else %}
-                    <a class="btn btn-warning" href="{{ path('link_gov_to_user', {id: claim.id, govId: gov.id}) }}">
-                        Link {{ claim.user.discordDisplayName }}
-                    </a>
-                {% endif %}
-            {% endset %}
-            {% include 'search/search_result_gov.html.twig' with {actions: actions} %}
-        {% endfor %}
-    {% endif %}
+            {% if searchResult is not empty %}
+                {% for gov in searchResult.governors %}
+                    {% set actions %}
+                        {% if gov.user %}
+                            <button class="btn btn-success disabled">Linked to {{ gov.user.discordDisplayName }}</button>
+                        {% else %}
+                            <a class="btn btn-warning" href="{{ path('link_gov_to_user', {id: claim.id, govId: gov.id}) }}">
+                                Link {{ claim.user.discordDisplayName }}
+                            </a>
+                        {% endif %}
+                    {% endset %}
+                    {% include 'search/search_result_gov.html.twig' with {actions: actions} %}
+                {% endfor %}
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
