--- a/templates/scribe/index.html.twig
+++ b/templates/scribe/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 {% for snapshotInfo in snapshots %}
     {% if snapshotInfo|default %}
-        <div class="card mb-3 shadow-sm">
+        <div class="card mb-3 shadow-sm status-{{ snapshotInfo.status }}">
             <div class="card-header">
                 <h3>
                     <a href="{{ path('scribe_snapshot_detail', {snapshotUid: snapshotInfo.uid}) }}">
@@ -13,16 +13,9 @@
                     </a>
                 </h3>
             </div>
+            <div class="status-bar"></div>
             <div class="card-body mb-0">
-                {% if snapshotInfo.completed %}
-                    <p class="mb-0">Completed: {{ snapshotInfo.completed|date }}. Total: {{ snapshotInfo.total }}</p>
-                {% endif %}
-                <p class="mb-0">
-                    Total: {{ snapshotInfo.total }}
-                    Completed: {{ snapshotInfo.numCompleted }}
-                    Incomplete: {{ snapshotInfo.numIncomplete }}
-                    Missing: {{ snapshotInfo.numMissing }}
-                </p>
+                {% include 'scribe/snapshot_stats.html.twig' with {snapshotInfo: snapshotInfo} only %}
             </div>
         </div>
     {% endif %}
@@ -34,8 +27,8 @@
     <div class="card-body mb-0">
         {% if is_granted(constant('App\\Entity\\Role::ROLE_SCRIBE_ADMIN')) %}
         <a  class="btn btn-warning" href="{{ path('scribe_snapshot_create') }}">Create Snapshot</a>
-        <a class="btn btn-outline-primary ml-2" href="{{ path('create_import') }}">Import</a>
         {% endif %}
+        <a class="btn btn-outline-primary ml-2" href="{{ path('create_import') }}">Import</a>
         <a class="btn btn-outline-primary ml-2" href="{{ path('export_index') }}">Export</a>
     </div>
 </div>
