--- a/templates/export/index.html.twig
+++ b/templates/export/index.html.twig
@@ -1,23 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block page_title %}Data Exports{% endblock %}
+{% block page_title %}Export Governor Data{% endblock %}
 
 {% block body %}
-    <div class="card mb-5 shadow-sm">
+    <div class="card mb-4 shadow-sm">
         <div class="card-header pb-0">
-            <h3>Export Current Governor Data</h3>
+            <h3>Filters</h3>
         </div>
         <div class="card-body pb-0">
-            {{ form(formExportAll) }}
+            {% if exportError %}
+            <div class="text-danger mb-3">
+                {{ exportError }}
+            </div>
+            {% endif %}
+            {{ form_start(form) }}
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    {{ form_label(form.alliance, null, {'label_attr': {'class': 'input-group-text'}}) }}
+                </div>
+                {{ form_widget(form.alliance) }}
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    {{ form_label(form.snapshot, null, {'label_attr': {'class': 'input-group-text'}}) }}
+                </div>
+                {{ form_widget(form.snapshot) }}
+            </div>
         </div>
     </div>
 
-    <div class="card mb-3 shadow-sm">
-        <div class="card-header pb-0">
-            <h3>Export Governor Data from Snapshot</h3>
-        </div>
-        <div class="card-body pb-0">
-            {{ form(formExportSnapshot) }}
-        </div>
-    </div>
+    {{ form_widget(form.export, {'attr': {'class': 'btn btn-primary'}}) }}
+    {{ form_end(form) }}
 {% endblock %}
