--- a/templates/governor/index.html.twig
+++ b/templates/governor/index.html.twig
@@ -17,8 +17,19 @@
         {% include 'governor/equipment.html.twig' with {equipment: equipment} only %}
     {% endif %}
 
+    {% if gov.altNames %}
+        <div class="card mb-3  shadow-sm">
+            <div class="card-header">
+                <h3>Alternative / Previous Names</h3>
+            </div>
+            <div class="card-body">
+                {{ gov.altNames }}
+            </div>
+        </div>
+    {% endif %}
+
     {% if userOwnsGov and (ffCommanders or ffEquipment) %}
-    <div class="card officer-actions mb-3  shadow-sm">
+    <div class="card mb-3  shadow-sm">
         <div class="card-header">
             <h3>Profile Actions</h3>
         </div>
