--- a/templates/officer/index.html.twig
+++ b/templates/officer/index.html.twig
@@ -8,6 +8,7 @@
             <h3>Admin Actions</h3>
         </div>
         <div class="card-body mb-0">
+            <a class="btn btn-primary mr-2" href="{{ path('governor_add') }}">Add Governor</a>
             {% if ffCommanders %}
             <a class="btn btn-primary mr-2" href="{{ path('commander_search') }}">Commander Search</a>
             {% endif %}
