--- a/templates/officer/governor_profile_claim.html.twig
+++ b/templates/officer/governor_profile_claim.html.twig
@@ -11,7 +11,7 @@
             <img class="img-fluid shadow mb-4" src="{{ asset(profileClaimImage) }}" alt="governor profile claim" />
 
             <div class="mt-3">
-            {% if claim.user.isKingdomMember or is_granted(constant('App\\Entity\\Role::ROLE_KINGDOM_MEMBER')) %}
+            {% if claim.user.isKingdomMember %}
                 <button class="btn btn-success disabled float-left">Kingdom Access Granted</button>
             {% else %}
                 <a class="btn btn-outline-warning float-left" href="{{ path('make_kingdom_member', {id: claim.user.id, redirect_to_claim: claim.id}) }}">
