implement custom number format filter

--- a/templates/search/gov_pills.html.twig
+++ b/templates/search/gov_pills.html.twig
@@ -1,15 +1,15 @@
 <div class="search-pill pill-border">
-    <span class="pill-label">Power</span> {{ gov.power|number_format }}
+    <span class="pill-label">Power</span> {{ gov.power|custom_nf }}
 </div>
 <div class="search-pill pill-border">
-    <span class="pill-label">Kills</span> {{ gov.kills|number_format }}
+    <span class="pill-label">Kills</span> {{ gov.kills|custom_nf }}
 </div>
 <div class="search-pill pill-border">
-    <span class="pill-label">T4 Kills</span> {{ gov.t4kills|number_format }}
+    <span class="pill-label">T4 Kills</span> {{ gov.t4kills|custom_nf }}
 </div>
 <div class="search-pill pill-border">
-    <span class="pill-label">T5 Kills</span> {{ gov.t5kills|number_format }}
+    <span class="pill-label">T5 Kills</span> {{ gov.t5kills|custom_nf }}
 </div>
 <div class="search-pill pill-border">
-    <span class="pill-label">Deads</span> {{ gov.deads|number_format }}
+    <span class="pill-label">Deads</span> {{ gov.deads|custom_nf }}
 </div>
