--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,14 @@
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
+
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ENXMZVQSGK"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-ENXMZVQSGK');
+        </script>
     </head>
     <body>
         <div class="hero {% block hero_class %}{% endblock %}">
