add analytics id

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'G-ENXMZVQSGK');
+            gtag('config', '{{ site_analytics_id }}');
         </script>
     </head>
     <body>
