rename profile claim button

--- a/templates/officer/index.html.twig
+++ b/templates/officer/index.html.twig
@@ -12,7 +12,7 @@
             {% if ffCommanders %}
             <a class="btn btn-primary mr-2" href="{{ path('commander_search') }}">Commander Search</a>
             {% endif %}
-            <a class="btn btn-primary" href="{{ path('governor_claims') }}">View Governor Claims</a>
+            <a class="btn btn-primary" href="{{ path('governor_claims') }}">View Profile Claims</a>
         </div>
     </div>
 
